Refactored code with code sugar provided by new java version. Removed overriding of the method in repository.