@@ -3,14 +3,11 @@ package com.evri.interview.service;
 import com.evri.interview.exceptions.CourierIsNotFound;
 import com.evri.interview.model.Courier;
 import com.evri.interview.model.CourierUpdate;
-import com.evri.interview.repository.CourierEntity;
 import com.evri.interview.repository.CourierRepository;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Service class for managing Courier objects.
@@ -32,13 +29,13 @@ public class CourierService {
         if (isActive) {
             return repository.findByActiveTrue().stream()
                              .map(courierTransformer::toCourier)
-                             .collect(Collectors.toList());
+                             .toList();
         }
 
         return repository.findAll()
                          .stream()
                          .map(courierTransformer::toCourier)
-                         .collect(Collectors.toList());
+                         .toList();
     }
 
     /**
@@ -50,17 +47,17 @@ public class CourierService {
      * @throws CourierIsNotFound if the courier with the provided id is not found.
      */
     public Courier updateCourier(Long courierId, CourierUpdate updatedCourier) {
-        Optional<CourierEntity> entity = repository.findById(courierId);
-        if (!entity.isPresent()) {
+        var entity = repository.findById(courierId);
+        if (entity.isEmpty()) {
             throw new CourierIsNotFound("Courier not found for provided id " + courierId);
         }
 
-        CourierEntity existingCourier = entity.get();
+        var existingCourier = entity.get();
         existingCourier.setFirstName(updatedCourier.getFirstName());
         existingCourier.setLastName(updatedCourier.getLastName());
         existingCourier.setActive(updatedCourier.isActive());
 
-        CourierEntity updated = repository.save(existingCourier);
+        var updated = repository.save(existingCourier);
 
         return courierTransformer.toCourier(updated);
     }
